--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
-  "name": "1-testing",
-  "version": "0.0.0",
-  "private": true,
+  "name": "latihan-testing",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node ./bin/www",
+    "dev": "nodemon app.js",
     "test": "jest"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "jest": "^29.5.0",
-    "morgan": "~1.9.1",
+    "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0",
     "pg": "^8.10.0",
+    "sequelize": "^6.31.0",
     "supertest": "^6.3.3"
   }
 }
