--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon app.js",
+    "start": "node bin/www",
+    "dev": "nodemon bin/www",
     "test": "jest"
   },
   "keywords": [],
