--- a/.github/workflows/dev-deployment.yml
+++ b/.github/workflows/dev-deployment.yml
@@ -50,3 +50,22 @@ jobs:
           DB_USERNAME: postgres
           DB_PASSWORD: password
           JWT_SECRET_KEY: rahasia
+
+  cd:
+    runs-on: ubuntu-latest
+    needs: ci
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Use Node 18
+        uses: actions/setup-node@v1
+        with:
+          node-version: 18.12.0
+      - name: Install packages
+        run: npm install
+      - name: Install Railway
+        run: npm i -g @railway/cli
+      - name: Deploy
+        run: railway up
+        env:
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_DEV_TOKEN }}
